# ComfyUI-speech-dataset-toolkit

./: README.md  __init__.py  basic_nodes.py  edit_nodes.py  filter_nodes.py  folder_util.py  node_def.py  pyproject.toml  requirements.txt  server.py  spec_nodes.py  visualize_node.py  waveform_util.py
ai/: bs_rformer_nodes.py  demucs_nodes.py  faster_whisper_nodes.py  kotoba_whisper_nodes.py  nemo_asr_nodes.py  nue_asr_nodes.py  silero_vad_nodes.py  speach_mos.py
web/js/: playAudio.js  uploadAudio.js
